# vuanem-basevn

./: .gcloudignore  .gitignore  WITH something AS (SELECT.sql  basevn.py  build_query.py  deploy.sh  main.py  pyproject.toml  requirements.txt  schema.txt  sss.json  workflow.py  workflow2.json  workflow_schema.json
.github/workflows/: main.yaml
basevn/: basevn_controller.py  basevn_service.py  interface.py  repo.py  utils.py
basevn/pipeline/: interface.py
basevn/pipeline/account/: users.py
basevn/pipeline/ehiring/: candidates.py  departments.py  openings.py
basevn/pipeline/wework/: project_details.py
basevn/wework/: wework_repo.py
basevn/workflow/: workflow_repo.py
controller/: pipelines.py  tasks.py
db/: bigquery.py
export/: 4192.json  4193.json  4224.json  4735.json
legacy_webhooks/: Basevn.workflow.json  Basevn.workflow2.json  basevn_webhooks.py  flows.json
libs/: bigquery.py  wework.py  workflow.py
models/: base.py
models/Wework/: ProjectDetails.py  projectdetails.json
models/Workflow/: Jobs.py  Workflows.py
schema/: dim_workflow_stages.json  wework_projects.json  wework_tasklists_schema.json  wework_tasks.json  wework_tasks_schema.json  workflow.json
sql/: _wework_projects_latest.sql  _wework_tasklists_latest.sql  _wework_tasks_latest.sql  _workflow_latest.sql  workflow_core.sql  workflow_form.sql  workflow_lite.sql  workflow_moves.sql  workflow_on_failed.sql  workflow_progression.sql
tasks/: cloud_tasks.py  tasks_service.py
test/: test_units.py
webhooks/: Basevn.wework.json  OGBasevn.wework.json  OGBasevn.workflow.json
(+5 files in other folders)
