[tool.poetry]
name = "vuanem-basevn"
version = "3.2"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^3.1.0"
google-cloud-tasks = "^2.9.0"
compose = "^1.2.8"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
testpaths = ["test"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
